# jweb

./: .gitignore  generate-content.py  hw2.py  pyproject.toml  run.sh
hwk2/: README.md  hw2.py  run.sh
hwk3/: PLAN.md  README.md  main.py  requirements.txt
hwk3/first_service/: README.md  main.py  requirements.txt
hwk3/second_service/: README.md  main.py  pyproject.toml
hwk4/: cleanup.sh  gcloud-commands-submit.sh  gcloud-commands.txt  hwk4.txt  save.txt  setup.sh  startup.sh  to_submit.sh
hwk4/client/: run_client.py  startup-client.sh
hwk4/first_service/: requirements.txt  server.py  startup-server.sh
hwk4/second_service/: main.py  requirements.txt  startup-subscriber.sh
hwk5/: README.md  cleanup.sh  init_db.py  print_requests.py  setup.sh  stats.py
hwk5/cloud_function/: main.py  pyproject.toml  requirements.txt
hwk5/first_service/: main.py  pyproject.toml  startup-server.sh
hwk5/second_service/: main.py  pyproject.toml  startup-subscriber.sh
hwk5/sql/: schema.sql
hwk6/: README.md  cleanup.sh  pyproject.toml  setup.sh  startup-trainer.sh  train_models.py
hwk6/sql/: migrate.sql  schema.sql
